--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "babel-core": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "import-export": "^1.0.1",
+    "mongodb": "^2.2.26",
+    "mongoose": "^4.9.10",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^3.0.0"
